set JBoss port offset for Arquillian tests to 20000 since Jenkins machine can only use ports from 15000 to 35530